# th

./: .gitignore
notebooks/: ltd_buildup_learning_notebook.ipynb
paper/: README.md  main.tex  metadata.tex  preamble.tex
paper/chapters/: 01_introduction.tex  02_related_work.tex  03_problem_formulation.tex  04_framework_architecture.tex  05_data_and_training.tex  06_evaluation_and_validation.tex  07_discussion.tex  08_conclusion_future_work.tex
paper/figures/: README.md
paper/refs/: README.md  references.bib
paper/scripts/: README.md
paper/tables/: README.md  ltd_tools_comparison.tex
simulator/physics/: README.md  UNITS.md  pyproject.toml  requirements.txt
simulator/physics/core/railphysics/: __init__.py  diagnostics.py  dynamics.py  forces.py  integrators.py  params.py  rollout.py  route.py  typing.py  units.py
simulator/physics/scripts/: demo_coastdown.py  demo_constant_throttle.py  demo_grade_climb.py
simulator/physics/tests/: test_sanity.py
simulator2/: README.md  __init__.py  constants.py  forces.py  io_types.py  params.py  rhs.py  route.py  scenarios.py  simulate.py  state_schema.py  tensor_state.py
simulator2/examples/: demo_tensorized_sim.py  draw_HE_tensors_figure.py  draw_consist_diagram.py  draw_dynamics_tensor_figure.py  poster_train_demo.py  train_dynamics_tensor_formulation.tex
simulator2/tests/: conftest.py  test_rollout_shapes.py  test_tensor_pack_unpack.py  test_tensorized_matches_classical.py
